--- a/MergeSets.ipynb
+++ b/MergeSets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,123 +22,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ticker</th>\n",
-       "      <th>company</th>\n",
-       "      <th>industry</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1AD</td>\n",
-       "      <td>ADALTA LIMITED</td>\n",
-       "      <td>Pharmaceuticals, Biotechnology &amp; Life Sciences</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1AG</td>\n",
-       "      <td>ALTERRA LIMITED</td>\n",
-       "      <td>Commercial &amp; Professional Services</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  ticker          company                                        industry\n",
-       "0    1AD   ADALTA LIMITED  Pharmaceuticals, Biotechnology & Life Sciences\n",
-       "1    1AG  ALTERRA LIMITED              Commercial & Professional Services"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ticker.head(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>publish_date</th>\n",
-       "      <th>headline_text</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>20030219</td>\n",
-       "      <td>aba decides against community broadcasting lic...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>20030219</td>\n",
-       "      <td>act fire witnesses must be aware of defamation</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   publish_date                                      headline_text\n",
-       "0      20030219  aba decides against community broadcasting lic...\n",
-       "1      20030219     act fire witnesses must be aware of defamation"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "headlines.head(2)"
    ]
@@ -147,71 +42,49 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "57f68117a4454cf494c8b563a44fe060",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(IntProgress(value=1, bar_style='info', max=1), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "\n",
-      "\n",
-      "0it [00:00, ?it/s]\u001b[A\u001b[A\u001b[A"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "05b905a8037f42d6964a5aa0d720d775",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=1103665), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "from multiprocessing import cpu_count, Pool\n",
+    " \n",
+    "cores = cpu_count()\n",
+    " \n",
+    "def parallelize(data, func):\n",
+    "    data_split = np.array_split(data, cores)\n",
+    "    pool = Pool(cores)\n",
+    "    data = pd.concat(pool.map(func, data_split))\n",
+    "    pool.close()\n",
+    "    pool.join()\n",
+    "    return data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from fuzzywuzzy import process, fuzz\n",
-    "from tqdm import tqdm, tqdm_notebook\n",
-    "tqdm_notebook().pandas(tqdm())\n",
     "\n",
+    "# Fuzzy match function\n",
     "def fuzzy_match(x, choices, scorer, cutoff):\n",
     "    return process.extractOne(\n",
     "        x, choices=choices, scorer=scorer, score_cutoff=cutoff\n",
     "    )\n",
     "\n",
-    "matching_results = headlines.loc[:, 'headline_text'].progress_apply(\n",
-    "    fuzzy_match,\n",
-    "    args=(\n",
-    "        ticker.loc[:, 'company'], \n",
-    "        fuzz.token_set_ratio,\n",
-    "        80\n",
+    "# Parallelization function, to run on each split of data\n",
+    "def appfun(df):\n",
+    "    return df.loc[:, 'headline_text'].apply(\n",
+    "        fuzzy_match,\n",
+    "        args=(\n",
+    "            ticker.loc[:, 'company'], \n",
+    "            fuzz.token_set_ratio,\n",
+    "            80\n",
+    "        )\n",
     "    )\n",
-    ")"
+    "\n",
+    "# Run in parallel\n",
+    "matching_results = parallelize(headlines, appfun)"
    ]
   },
   {
