--- a/MergeSets.ipynb
+++ b/MergeSets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,37 +22,143 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ticker</th>\n",
+       "      <th>company</th>\n",
+       "      <th>industry</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1AD</td>\n",
+       "      <td>ADALTA LIMITED</td>\n",
+       "      <td>Pharmaceuticals, Biotechnology &amp; Life Sciences</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1AG</td>\n",
+       "      <td>ALTERRA LIMITED</td>\n",
+       "      <td>Commercial &amp; Professional Services</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  ticker          company                                        industry\n",
+       "0    1AD   ADALTA LIMITED  Pharmaceuticals, Biotechnology & Life Sciences\n",
+       "1    1AG  ALTERRA LIMITED              Commercial & Professional Services"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ticker.head(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>publish_date</th>\n",
+       "      <th>headline_text</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>20030219</td>\n",
+       "      <td>aba decides against community broadcasting lic...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>20030219</td>\n",
+       "      <td>act fire witnesses must be aware of defamation</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   publish_date                                      headline_text\n",
+       "0      20030219  aba decides against community broadcasting lic...\n",
+       "1      20030219     act fire witnesses must be aware of defamation"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "headlines.head(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
     "from multiprocessing import cpu_count, Pool\n",
-    " \n",
+    "from tqdm import tqdm\n",
+    "\n",
     "cores = cpu_count()\n",
     " \n",
     "def parallelize(data, func):\n",
     "    data_split = np.array_split(data, cores)\n",
     "    pool = Pool(cores)\n",
-    "    data = pd.concat(pool.map(func, data_split))\n",
+    "    data = pd.concat(tqdm(pool.map(func, data_split)))\n",
     "    pool.close()\n",
     "    pool.join()\n",
     "    return data"
@@ -62,9 +168,18 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "HALP:   1%|          | 840/137958 [00:47<2:01:07, 18.87it/s] "
+     ]
+    }
+   ],
    "source": [
     "from fuzzywuzzy import process, fuzz\n",
+    "tqdm.pandas(desc=\"HALP\")\n",
     "\n",
     "# Fuzzy match function\n",
     "def fuzzy_match(x, choices, scorer, cutoff):\n",
@@ -74,7 +189,7 @@
     "\n",
     "# Parallelization function, to run on each split of data\n",
     "def appfun(df):\n",
-    "    return df.loc[:, 'headline_text'].apply(\n",
+    "    return df.loc[:, 'headline_text'].progress_apply(\n",
     "        fuzzy_match,\n",
     "        args=(\n",
     "            ticker.loc[:, 'company'], \n",
@@ -111,7 +226,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
