Attempted NLTK, no dice.

--- a/MergeSets.ipynb
+++ b/MergeSets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,143 +22,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>ticker</th>\n",
-       "      <th>company</th>\n",
-       "      <th>industry</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1AD</td>\n",
-       "      <td>ADALTA LIMITED</td>\n",
-       "      <td>Pharmaceuticals, Biotechnology &amp; Life Sciences</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1AG</td>\n",
-       "      <td>ALTERRA LIMITED</td>\n",
-       "      <td>Commercial &amp; Professional Services</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  ticker          company                                        industry\n",
-       "0    1AD   ADALTA LIMITED  Pharmaceuticals, Biotechnology & Life Sciences\n",
-       "1    1AG  ALTERRA LIMITED              Commercial & Professional Services"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ticker.head(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>publish_date</th>\n",
-       "      <th>headline_text</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>20030219</td>\n",
-       "      <td>aba decides against community broadcasting lic...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>20030219</td>\n",
-       "      <td>act fire witnesses must be aware of defamation</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   publish_date                                      headline_text\n",
-       "0      20030219  aba decides against community broadcasting lic...\n",
-       "1      20030219     act fire witnesses must be aware of defamation"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "headlines.head(2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Split the DF into chunks, and process each in a seperate thread on your CPU\n",
+    "\n",
     "import numpy as np\n",
     "from multiprocessing import cpu_count, Pool\n",
-    "from tqdm import tqdm\n",
     "\n",
     "cores = cpu_count()\n",
     " \n",
     "def parallelize(data, func):\n",
     "    data_split = np.array_split(data, cores)\n",
     "    pool = Pool(cores)\n",
-    "    data = pd.concat(tqdm(pool.map(func, data_split)))\n",
+    "    data = pd.concat(pool.map(func, data_split))\n",
     "    pool.close()\n",
     "    pool.join()\n",
     "    return data"
@@ -168,38 +64,38 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "HALP:   1%|          | 840/137958 [00:47<2:01:07, 18.87it/s] "
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# Attempt to Fuzzy Match up to FIRSTN records\n",
+    "\n",
     "from fuzzywuzzy import process, fuzz\n",
+    "from tqdm import tqdm\n",
+    "\n",
     "tqdm.pandas(desc=\"HALP\")\n",
+    "\n",
+    "FIRSTN = 1000\n",
     "\n",
     "# Fuzzy match function\n",
     "def fuzzy_match(x, choices, scorer, cutoff):\n",
-    "    return process.extractOne(\n",
-    "        x, choices=choices, scorer=scorer, score_cutoff=cutoff\n",
-    "    )\n",
+    "    return process.extractOne(x, choices=choices, scorer=scorer, score_cutoff=cutoff)\n",
+    "    \n",
     "\n",
     "# Parallelization function, to run on each split of data\n",
     "def appfun(df):\n",
-    "    return df.loc[:, 'headline_text'].progress_apply(\n",
+    "    return df.loc[:FIRSTN, 'headline_text'].progress_apply(\n",
     "        fuzzy_match,\n",
     "        args=(\n",
     "            ticker.loc[:, 'company'], \n",
-    "            fuzz.token_set_ratio,\n",
+    "            fuzz.partial_ratio,\n",
     "            80\n",
     "        )\n",
     "    )\n",
     "\n",
     "# Run in parallel\n",
-    "matching_results = parallelize(headlines, appfun)"
+    "# matching_results = parallelize(headlines, appfun)\n",
+    "# test = headlines[:FIRSTN].copy()\n",
+    "# test['match'] = matching_results\n",
+    "# test[test['match'].notnull()]"
    ]
   },
   {
@@ -207,7 +103,65 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Sandbox\n",
+    "\n",
+    "import nltk\n",
+    "nltk.download('averaged_perceptron_tagger')\n",
+    "nouns = ['NNS', 'NNP', 'NNPS']\n",
+    "string = \"qantas urged to update security in shadow of\".split()\n",
+    "tags = nltk.tag.pos_tag(string)\n",
+    "filtered = \" \".join([x[0] for x in tags if x[1] in nouns])\n",
+    "actual = 'QANTAS AIRWAYS LIMITED'.lower()\n",
+    "print(filtered, actual)\n",
+    "fuzz.ratio(filtered, actual)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## Attempt to Fuzzy Match only the nouns of a sentence, up to FIRSTN records.\n",
+    "\n",
+    "from fuzzywuzzy import process, fuzz\n",
+    "from tqdm import tqdm\n",
+    "import nltk\n",
+    "nltk.download('averaged_perceptron_tagger')\n",
+    "\n",
+    "tqdm.pandas(desc=\"HALP\")\n",
+    "\n",
+    "nouns = ['NNS', 'NNP', 'NNPS']\n",
+    "\n",
+    "FIRSTN = 1000\n",
+    "\n",
+    "# Fuzzy match function\n",
+    "def fuzzy_match(x, choices, scorer, cutoff):\n",
+    "    tags = nltk.tag.pos_tag(x.split())\n",
+    "    filtered = \" \".join([x[0] for x in tags if x[1] in nouns])\n",
+    "    if filtered == '':\n",
+    "        return\n",
+    "    return process.extractOne(filtered, choices=choices, scorer=scorer, score_cutoff=cutoff)\n",
+    "    \n",
+    "\n",
+    "# Parallelization function, to run on each split of data\n",
+    "def appfun(df):\n",
+    "    return df.loc[:FIRSTN, 'headline_text'].progress_apply(\n",
+    "        fuzzy_match,\n",
+    "        args=(\n",
+    "            ticker.loc[:, 'company'].map(lambda x: x.lower()), \n",
+    "            fuzz.partial_ratio,\n",
+    "            65\n",
+    "        )\n",
+    "    )\n",
+    "\n",
+    "# Run in parallel\n",
+    "matching_results = parallelize(headlines, appfun)\n",
+    "test = headlines[:FIRSTN].copy()\n",
+    "test['match'] = matching_results\n",
+    "test[test['match'].notnull()]"
+   ]
   }
  ],
  "metadata": {
