Reorganized imports, added filtering of headlines prior to matching.

--- a/MergeSets.ipynb
+++ b/MergeSets.ipynb
@@ -2,16 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from fuzzywuzzy import process, fuzz\n",
+    "from tqdm import tqdm_notebook, tqdm\n",
+    "# import nltk"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -74,7 +78,7 @@
        "1    1AG  ALTERRA LIMITED              Commercial & Professional Services"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -85,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +138,7 @@
        "1      20030219     act fire witnesses must be aware of defamation"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -145,13 +149,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Split the DF into chunks, and process each in a seperate thread on your CPU\n",
+    "# Clear out records that don't have any company word mentions\n",
+    "import string\n",
+    "translator = str.maketrans('','',string.punctuation)\n",
     "\n",
-    "import numpy as np\n",
+    "def normalize(s):\n",
+    "    return s.lower().translate(translator).split()\n",
+    "\n",
+    "def incompwords(s):\n",
+    "    headwords = set(normalize(s))\n",
+    "    return len(headwords & compwords) > 0\n",
+    "\n",
+    "compwords = set(normalize((\" \".join(ticker['company'].values))))\n",
+    "headlines_filtered = headlines[headlines['headline_text'].apply(incompwords)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Parallelization Code: Will split data evenly amoungst threads\n",
     "from multiprocessing import cpu_count, Pool\n",
     "\n",
     "cores = cpu_count()\n",
@@ -167,16 +190,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Attempt to Fuzzy Match up to FIRSTN records\n",
-    "\n",
-    "from fuzzywuzzy import process, fuzz\n",
-    "from tqdm import tqdm\n",
-    "\n",
-    "tqdm.pandas(desc=\"HALP\")\n",
+    "tqdm.pandas(desc=\"Raw Fuzzy Match\")\n",
     "\n",
     "FIRSTN = 1000\n",
     "\n",
@@ -205,25 +224,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'nltk'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-7-6748fa64e54e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Sandbox\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mnltk\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mnltk\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdownload\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'averaged_perceptron_tagger'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mnouns\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m'NNS'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'NNP'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m'NNPS'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'nltk'"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Sandbox\n",
-    "\n",
-    "import nltk\n",
     "nltk.download('averaged_perceptron_tagger')\n",
     "nouns = ['NNS', 'NNP', 'NNPS']\n",
     "string = \"qantas urged to update security in shadow of\".split()\n",
@@ -241,13 +246,10 @@
    "outputs": [],
    "source": [
     "## Attempt to Fuzzy Match only the nouns of a sentence, up to FIRSTN records.\n",
-    "\n",
     "from fuzzywuzzy import process, fuzz\n",
-    "from tqdm import tqdm\n",
-    "import nltk\n",
     "nltk.download('averaged_perceptron_tagger')\n",
     "\n",
-    "tqdm.pandas(desc=\"HALP\")\n",
+    "tqdm.pandas(desc=\"Fuzzy with only Nouns\")\n",
     "\n",
     "nouns = ['NNS', 'NNP', 'NNPS']\n",
     "\n",
@@ -287,10 +289,6 @@
    "outputs": [],
    "source": [
     "## Custom Approach\n",
-    "import string\n",
-    "import numpy as np\n",
-    "from tqdm import tqdm_notebook, tqdm\n",
-    "\n",
     "tick_df = ticker.copy();\n",
     "head_df = headlines.copy().head(1000);\n",
     "head_df['matches'] = None\n",
@@ -298,9 +296,8 @@
     "\n",
     "print(\"Vectorizing...\")\n",
     "# 1. Vectorize companies and headlines in their stripped form.\n",
-    "translator = str.maketrans('','',string.punctuation)\n",
     "def vectorize(s):\n",
-    "    tokens = s.lower().translate(translator).split()\n",
+    "    tokens = normalize(s)\n",
     "    return [ np.array(list(word)) for word in tokens ]\n",
     "tick_df['comp_vec'] = tick_df['company'].apply(vectorize)\n",
     "head_df['head_vec'] = head_df['headline_text'].apply(vectorize)\n",
@@ -375,59 +372,75 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Vectorizing...\n"
+      "Vectorizing...\n",
+      "\n",
+      "Looping...\n",
+      "GO\n"
      ]
     },
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1268959ba0de4d34ab0bf69c1e8243ce",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(IntProgress(value=1, bar_style='info', max=1), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "HALP:   0%|          | 29/187597 [00:10<20:55:13,  2.49it/s]"
+     ]
     },
     {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a4246c7b2d0e45169677cccaed5546a2",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(IntProgress(value=0, max=1000), HTML(value='')))"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GO\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "HALP:   0%|          | 7/187596 [00:02<21:44:08,  2.40it/s]]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GO\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "HALP:   0%|          | 37/187596 [00:14<18:08:28,  2.87it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GO\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "HALP:   0%|          | 40/187596 [00:15<17:13:04,  3.03it/s]"
+     ]
     }
    ],
    "source": [
     "## Set Union Approach for faster computation.\n",
-    "\n",
-    "import string\n",
-    "import numpy as np\n",
-    "from tqdm import tqdm_notebook, tqdm\n",
-    "\n",
     "tick_df = ticker.copy();\n",
-    "head_df = headlines.copy().head(1000);\n",
+    "head_df = headlines_filtered.copy();\n",
     "head_df['matches'] = None\n",
     "head_df.astype({'matches':'object'})\n",
     "\n",
     "print(\"Vectorizing...\")\n",
     "# 1. Vectorize companies and headlines in their stripped form.\n",
-    "translator = str.maketrans('','',string.punctuation)\n",
-    "def makeSet(s):\n",
-    "    return s.lower().translate(translator).split()\n",
-    "tick_df['comp_set'] = tick_df['company'].apply(lambda x: set(makeSet(x)))\n",
-    "head_df['head_set'] = head_df['headline_text'].apply(lambda x: set(makeSet(x)))\n",
-    "tick_df['comp_list'] = tick_df['company'].apply(lambda x: makeSet(x))\n",
-    "head_df['head_list'] = head_df['headline_text'].apply(lambda x: makeSet(x))\n",
+    "tick_df['comp_set'] = tick_df['company'].apply(lambda x: set(normalize(x)))\n",
+    "head_df['head_set'] = head_df['headline_text'].apply(lambda x: set(normalize(x)))\n",
+    "tick_df['comp_list'] = tick_df['company'].apply(lambda x: normalize(x))\n",
+    "head_df['head_list'] = head_df['headline_text'].apply(lambda x: normalize(x))\n",
     "\n",
     "# 2. Headline opertion\n",
     "MIN_SCORE = 0.3\n",
@@ -463,17 +476,17 @@
     "    return matchedCompanies[:10]\n",
     "\n",
     "# Uncomment for parallel and comment the bottom part\n",
-    "# tqdm.pandas(desc=\"HALP\")\n",
-    "# def appfun(df):\n",
-    "#     print('GO')\n",
-    "#     return df.progress_apply(findMatches, axis=1)\n",
+    "tqdm.pandas(desc=\"HALP\")\n",
+    "def appfun(df):\n",
+    "    print('GO')\n",
+    "    return df.progress_apply(findMatches, axis=1)\n",
     "\n",
-    "# print(\"Looping...\")\n",
-    "# parallelize(head_df, appfun)\n",
+    "print(\"Looping...\")\n",
+    "parallelize(head_df, appfun)\n",
     "\n",
-    "tqdm_notebook().pandas(\"matching\")\n",
-    "head_df['matches'] = head_df.progress_apply(findMatches, axis=1)\n",
-    "head_df"
+    "# tqdm_notebook().pandas(\"matching\")\n",
+    "# head_df['matches'] = head_df.progress_apply(findMatches, axis=1)\n",
+    "# head_df"
    ]
   },
   {
